--- a/client/style/style.scss
+++ b/client/style/style.scss
@@ -92,6 +92,13 @@ body {
     height: 100%;
   }
   .toolContainer {
+    .ant-card-head,
+    .ant-card-head-title {
+      padding: 0px;
+    }
+    .ant-card-head-wrapper {
+      height: 100%;
+    }
     display: flex;
     height: 100%;
     flex-direction: column;
@@ -103,24 +110,32 @@ body {
       justify-content: center;
       align-items: center;
       flex-grow: 1;
-      max-height: 100%;
+      height: 15vh;
       width: 100%;
       background-color: seagreen;
-      padding: 20px;
+      padding: 1vw;
       .titleInput {
-        height: 100%;
         background-color: yellow;
+        height: 100%;
+      }
+      .titleInput,.titleHeading{
+        text-align: center;
+        font-size: 5vh;
       }
       .progressIndicator {
         width: 100px;
-        height:10px;
-        background-color: red;  
+        height: 10px;
+        background-color: red;
       }
     }
     .taskArea {
       flex-grow: 6;
       width: 100%;
       background-color: black;
+      .ant-card-body {
+        padding: 1px;
+        height: 100%;
+      }
     }
   }
 }
