--- a/client/style/style.scss
+++ b/client/style/style.scss
@@ -27,10 +27,13 @@ body {
     display: flex;
     height: 100%;
     flex-direction: column;
-    align-items: stretch;
     background-color: #9ff3f5;
 
-    .titleHeading--isEditing {
+    .titleInput {
+      display: none;
+      opacity: 0;
+      text-align: center;
+      width: 100%;
       height: 100%;
     }
     .titleHeading {
@@ -49,18 +52,36 @@ body {
       flex-grow: 1;
       height: 10vh;
       width: 100%;
-
-      .titleHeading--isEditing {
-        font-size: 5vh !important;
+      span {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        align-items: stretch;
+        text-align: center;
       }
+
       .titleHeading {
+        align-items: center;
         font-size: 3.5vh;
+        display: flex;
+        justify-content: center;
       }
 
       .progressIndicator {
         width: 100px;
         height: 10px;
         background-color: red;
+      }
+    }
+    .goal__headerBar--isEditing {
+      .titleInput {
+        display: block!important;
+        height: 100%;
+        width: 100%;
+        opacity:100;
+        font-size: 5vh !important;
+        -webkit-transition: opacity 2s; /* Safari prior 6.1 */
+        transition: opacity 2s;
       }
     }
 
@@ -101,12 +122,39 @@ body {
           width: 100%;
           justify-content: center;
 
-          .titleHeading--isEditing {
+          .titleInput {
             height: 8vh;
             font-size: 3.5vh !important;
           }
           .titleHeading {
             font-size: 2.5vh;
+          }
+        } 
+        .taskItem__headerBar--isEditing {
+          span {
+            height: 100%;
+            width: 100%
+          }
+          .titleInput {
+            display: block!important;
+            height: 8vh;
+            width: 100%;
+            font-size: 3.5vh !important;
+            opacity:100;
+          }
+        }
+
+        .taskItem__body{
+          display: flex;
+          flex-direction: column;
+          height: 100%;
+          align-items: center;
+          padding: 10px;
+          .taskItem__body__content {
+            flex-grow: 6;
+          }
+          .taskItem__body__footer {
+            flex-grow: 1;
           }
         }
       }
