--- a/client/style/style.scss
+++ b/client/style/style.scss
@@ -59,8 +59,17 @@ body {
         align-items: stretch;
         text-align: center;
       }
-
+      .goal__moreOptions{
+        display: block;
+        width: 10%;
+        height: 100%;
+      }
+      .goal__moreOptionsIcon{
+        display: table-cell;
+        vertical-align: middle;
+      }
       .titleHeading {
+        flex-grow: 5;
         align-items: center;
         font-size: 3.5vh;
         display: flex;
@@ -76,12 +85,12 @@ body {
     .goal__headerBar--isEditing {
       .titleInput {
         display: block!important;
-        height: 100%;
-        width: 100%;
+        margin: 0 auto;
+        width: 80%;
         opacity:100;
         font-size: 5vh !important;
         -webkit-transition: opacity 2s; /* Safari prior 6.1 */
-        transition: opacity 2s;
+        transition: opacity 9s;
       }
     }
 
@@ -191,79 +200,7 @@ body {
   .row {
     margin: 0px 0px;
   }
-  .col,
-  .col-1,
-  .col-10,
-  .col-11,
-  .col-12,
-  .col-2,
-  .col-3,
-  .col-4,
-  .col-5,
-  .col-6,
-  .col-7,
-  .col-8,
-  .col-9,
-  .col-auto,
-  .col-lg,
-  .col-lg-1,
-  .col-lg-10,
-  .col-lg-11,
-  .col-lg-12,
-  .col-lg-2,
-  .col-lg-3,
-  .col-lg-4,
-  .col-lg-5,
-  .col-lg-6,
-  .col-lg-7,
-  .col-lg-8,
-  .col-lg-9,
-  .col-lg-auto,
-  .col-md,
-  .col-md-1,
-  .col-md-10,
-  .col-md-11,
-  .col-md-12,
-  .col-md-2,
-  .col-md-3,
-  .col-md-4,
-  .col-md-5,
-  .col-md-6,
-  .col-md-7,
-  .col-md-8,
-  .col-md-9,
-  .col-md-auto,
-  .col-sm,
-  .col-sm-1,
-  .col-sm-10,
-  .col-sm-11,
-  .col-sm-12,
-  .col-sm-2,
-  .col-sm-3,
-  .col-sm-4,
-  .col-sm-5,
-  .col-sm-6,
-  .col-sm-7,
-  .col-sm-8,
-  .col-sm-9,
-  .col-sm-auto,
-  .col-xl,
-  .col-xl-1,
-  .col-xl-10,
-  .col-xl-11,
-  .col-xl-12,
-  .col-xl-2,
-  .col-xl-3,
-  .col-xl-4,
-  .col-xl-5,
-  .col-xl-6,
-  .col-xl-7,
-  .col-xl-8,
-  .col-xl-9,
-  .col-xl-auto {
-    padding: 0px 0px;
-  }
-  button.btn {
+  button {
     cursor: pointer;
   }
 }
